@@ -1,7 +1,3 @@
-/*
- * Copyright (c) Tarek Hosni El Alaoui 2017
- */
-
 package de.dytanic.cloudnetwrapper.server;
 
 import de.dytanic.cloudnet.lib.ConnectableAddress;
@@ -28,7 +24,6 @@ import de.dytanic.cloudnetwrapper.server.process.ServerDispatcher;
 import de.dytanic.cloudnetwrapper.util.FileUtility;
 
 import java.io.File;
-import java.io.FileFilter;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.URL;
@@ -36,9 +31,10 @@ import java.net.URLConnection;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.LinkedList;
+import java.util.HashMap;
 import java.util.Objects;
 import java.util.Queue;
+import java.util.concurrent.TimeUnit;
 
 public class BungeeCord extends AbstractScreenService implements ServerDispatcher {
 
@@ -100,9 +96,9 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
         for (ServerInstallablePlugin url : proxyProcessMeta.getDownloadablePlugins()) {
             if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"))) {
                 try {
-                    URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
+                    URLConnection urlConnection = new URL(url.getUrl()).openConnection();
                     urlConnection.setRequestProperty("User-Agent",
-                                                     "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                     NetworkUtils.USER_AGENT);
                     Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
                 } catch (Exception ex) {
                     ex.printStackTrace();
@@ -116,9 +112,9 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                 case URL: {
                     if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"))) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
+                            URLConnection urlConnection = new URL(url.getUrl()).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
                             Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
                         } catch (Exception ex) {
                             ex.printStackTrace();
@@ -130,20 +126,12 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                     if (!Files.exists(Paths.get("local/cache/web_plugins/" + url.getName() + ".jar")) && CloudNetWrapper.getInstance()
                                                                                                                         .getSimpledUser() != null) {
                         try {
-                            URLConnection urlConnection = new java.net.URL(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                            .getOptionSet()
-                                                                                                            .has("ssl") ? "https://" : "http://")
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getCloudnetHost())
-                                                                               .append(':')
-                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                      .getWrapperConfig()
-                                                                                                      .getWebPort())
-                                                                               .append("/cloudnet/api/v1/download")
-                                                                               .substring(0)).openConnection();
+                            URLConnection urlConnection = new URL(
+                                String.format("http://%s:%d/cloudnet/api/v1/download",
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getWebPort())).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
 
                             SimpledUser simpledUser = CloudNetWrapper.getInstance().getSimpledUser();
                             urlConnection.setRequestProperty("-Xcloudnet-user", simpledUser.getUserName());
@@ -169,7 +157,7 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
             if (!Files.exists(dir)) {
                 Files.createDirectories(dir);
                 if (proxyProcessMeta.getUrl() != null) {
-                    Files.createDirectory(Paths.get(path + "/plugins"));
+                    Files.createDirectory(Paths.get(path, "plugins"));
                     for (ServerInstallablePlugin plugin : proxyProcessMeta.getDownloadablePlugins()) {
                         FileUtility.copyFileToDirectory(new File("local/cache/web_plugins/" + plugin.getName() + ".jar"),
                                                         new File(path + "/plugins"));
@@ -205,23 +193,15 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                         String groupTemplates = "local/cache/web_templates/" + proxyGroup.getName() + NetworkUtils.SLASH_STRING + template.getName();
                         if (!Files.exists(Paths.get(groupTemplates))) {
                             Files.createDirectories(Paths.get(groupTemplates));
-                            MasterTemplateLoader templateLoader = new MasterTemplateLoader(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                                            .getOptionSet()
-                                                                                                                            .has("ssl") ? "https://" : "http://")
-                                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                                      .getWrapperConfig()
-                                                                                                                      .getCloudnetHost())
-                                                                                               .append(':')
-                                                                                               .append(CloudNetWrapper.getInstance()
-                                                                                                                      .getWrapperConfig()
-                                                                                                                      .getWebPort())
-                                                                                               .append("/cloudnet/api/v1/download")
-                                                                                               .substring(0),
-                                                                                           groupTemplates + "/template.zip",
-                                                                                           CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                           template,
-                                                                                           proxyGroup.getName(),
-                                                                                           null);
+                            MasterTemplateLoader templateLoader = new MasterTemplateLoader(
+                                String.format("http://%s:%d/cloudnet/api/v1/download",
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                              CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()),
+                                groupTemplates + "/template.zip",
+                                CloudNetWrapper.getInstance().getSimpledUser(),
+                                template,
+                                proxyGroup.getName(),
+                                null);
                             System.out.println("Downloading template for " + this.proxyProcessMeta.getServiceId().getGroup());
                             templateLoader.load();
                             templateLoader.unZip(groupTemplates);
@@ -278,23 +258,15 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                     String groupTemplates = "local/cache/web_templates/" + proxyGroup.getName() + NetworkUtils.SLASH_STRING + template.getName();
                     if (!Files.exists(Paths.get(groupTemplates))) {
                         Files.createDirectories(Paths.get(groupTemplates));
-                        MasterTemplateLoader templateLoader = new MasterTemplateLoader(new StringBuilder(CloudNetWrapper.getInstance()
-                                                                                                                        .getOptionSet()
-                                                                                                                        .has("ssl") ? "https://" : "http://")
-                                                                                           .append(CloudNetWrapper.getInstance()
-                                                                                                                  .getWrapperConfig()
-                                                                                                                  .getCloudnetHost())
-                                                                                           .append(':')
-                                                                                           .append(CloudNetWrapper.getInstance()
-                                                                                                                  .getWrapperConfig()
-                                                                                                                  .getWebPort())
-                                                                                           .append("/cloudnet/api/v1/download")
-                                                                                           .substring(0),
-                                                                                       groupTemplates + "/template.zip",
-                                                                                       CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                       template,
-                                                                                       proxyGroup.getName(),
-                                                                                       null);
+                        MasterTemplateLoader templateLoader = new MasterTemplateLoader(
+                            String.format("http://%s:%d/cloudnet/api/v1/download",
+                                          CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                          CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()),
+                            groupTemplates + "/template.zip",
+                            CloudNetWrapper.getInstance().getSimpledUser(),
+                            template,
+                            proxyGroup.getName(),
+                            null);
                         System.out.println("Downloading template for " + this.proxyProcessMeta.getServiceId().getGroup());
                         templateLoader.load();
                         templateLoader.unZip(groupTemplates);
@@ -320,7 +292,7 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                 try {
                     URLConnection urlConnection = new URL(version.getFirst()).openConnection();
                     urlConnection.setRequestProperty("User-Agent",
-                                                     "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                     NetworkUtils.USER_AGENT);
                     urlConnection.connect();
                     System.out.println("Downloading " + version.getSecond() + "...");
                     Files.copy(urlConnection.getInputStream(), path);
@@ -330,7 +302,7 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
             }
 
             FileUtility.copyFileToDirectory(new File("local/proxy_versions/" + version.getSecond()), new File(this.path));
-            new File(this.path + NetworkUtils.SLASH_STRING + version.getSecond()).renameTo(new File(this.path + "/BungeeCord.jar"));
+            Files.move(Paths.get(this.path, version.getSecond()), Paths.get(this.path, "BungeeCord.jar"));
         }
 
         if (!Files.exists(Paths.get(path + "/server-icon.png")) && Files.exists(Paths.get("local/server-icon.png"))) {
@@ -341,9 +313,8 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
         FileUtility.insertData("files/CloudNetAPI.jar", path + "/plugins/CloudNetAPI.jar");
 
         FileUtility.rewriteFileUtils(new File(path + "/config.yml"),
-                                     '"' + CloudNetWrapper.getInstance()
-                                                          .getWrapperConfig()
-                                                          .getProxy_config_host() + ':' + this.proxyProcessMeta.getPort() + '"');
+                                     CloudNetWrapper.getInstance().getWrapperConfig().getProxyConfigHost() +
+                                         ':' + this.proxyProcessMeta.getPort());
 
         if (CloudNetWrapper.getInstance().getWrapperConfig().isViaVersion()) {
             if (!Files.exists(Paths.get("local/ViaVersion-Proxied.jar"))) {
@@ -352,13 +323,13 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                     URLConnection url = new URL(
                         "https://ci.cloudnetservice.eu/job/ViaVersion/lastStableBuild/artifact/jar/target/ViaVersion.jar").openConnection();
                     url.setRequestProperty("User-Agent",
-                                           "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                           NetworkUtils.USER_AGENT);
                     url.connect();
                     Files.copy(url.getInputStream(), Paths.get("local/ViaVersion-Proxied.jar"));
                     ((HttpURLConnection) url).disconnect();
                     System.out.println("Download complete successfully!");
                 } catch (Exception ex) {
-
+                    ex.printStackTrace();
                 }
             }
             FileUtility.copyFileToDirectory(new File("local/ViaVersion-Proxied.jar"), new File(path + "/plugins"));
@@ -368,7 +339,7 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
                                        CloudNetWrapper.getInstance().getWrapperConfig().getInternalIP(),
                                        proxyProcessMeta.getPort(),
                                        false,
-                                       new LinkedList<>(),
+                                       new HashMap<>(),
                                        proxyProcessMeta.getMemory(),
                                        0);
 
@@ -378,12 +349,10 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
 
         new Document().append("serviceId", proxyProcessMeta.getServiceId())
                       .append("proxyProcess", proxyProcessMeta)
-                      .append("host",
-                              CloudNetWrapper.getInstance()
-                                             .getWrapperConfig()
-                                             .getProxy_config_host() + ':' + this.proxyProcessMeta.getPort())
+                      .append("host", String.format("%s:%d",
+                                                    CloudNetWrapper.getInstance().getWrapperConfig().getProxyConfigHost(),
+                                                    this.proxyProcessMeta.getPort()))
                       .append("proxyInfo", proxyInfo)
-                      .append("ssl", CloudNetWrapper.getInstance().getOptionSet().has("ssl"))
                       .append("memory", proxyProcessMeta.getMemory())
                       .saveAsConfig(Paths.get(path + "/CLOUD/config.json"));
         new Document().append("connection",
@@ -403,15 +372,15 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
             commandBuilder.append(command).append(NetworkUtils.SPACE_STRING);
         }
 
-        commandBuilder.append(
-            "-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:MaxPermSize=256M -XX:-UseAdaptiveSizePolicy -XX:CompileThreshold=100 -Dio.netty.leakDetectionLevel=DISABLED -Dfile.encoding=UTF-8 -Dio.netty.maxDirectMemory=0 -Dio.netty.recycler.maxCapacity=0 -Dio.netty.recycler.maxCapacity.default=0 -Djline.terminal=jline.UnsupportedTerminal -DIReallyKnowWhatIAmDoingISwear=true -Xmx" + proxyProcessMeta
-                .getMemory() + "M -jar BungeeCord.jar -o true -p");
+        commandBuilder.append("-Dfile.encoding=UTF-8 -Dcom.mojang.eula.agree=true -Djline.terminal=jline.UnsupportedTerminal -Xmx")
+                      .append(proxyProcessMeta.getMemory())
+                      .append("M -jar BungeeCord.jar");
 
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutAddProxy(proxyInfo, proxyProcessMeta));
-        System.out.println("Proxy " + toString() + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
+        System.out.println("Proxy " + this + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
 
         this.instance = Runtime.getRuntime().exec(commandBuilder.substring(0).split(NetworkUtils.SPACE_STRING), null, new File(path));
-        CloudNetWrapper.getInstance().getProxys().put(this.proxyProcessMeta.getServiceId().getServerId(), this);
+        CloudNetWrapper.getInstance().getProxies().put(this.proxyProcessMeta.getServiceId().getServerId(), this);
         return true;
     }
 
@@ -421,7 +390,7 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
         if (instance == null) {
             if (proxyGroup.getProxyGroupMode().equals(ProxyGroupMode.DYNAMIC)) {
                 try {
-                    Files.delete(Paths.get(path));
+                    Files.deleteIfExists(Paths.get(path));
                 } catch (IOException e) {
                     e.printStackTrace();
                 }
@@ -431,20 +400,22 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
 
         if (instance.isAlive()) {
             executeCommand("end");
-            NetworkUtils.sleepUninterruptedly(500);
-        }
+            try {
+                if (!instance.waitFor(60, TimeUnit.SECONDS)) {
+                    instance.destroyForcibly();
+                }
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+                instance.destroyForcibly();
+            }
 
-        instance.destroyForcibly();
+        }
 
         if (CloudNetWrapper.getInstance().getWrapperConfig().isSavingRecords()) {
             try {
-                for (File file : new File(path).listFiles(new FileFilter() {
-                    @Override
-                    public boolean accept(File pathname) {
-                        return pathname.getName().contains("proxy.log");
-                    }
-                })) {
-                    FileUtility.copyFileToDirectory(file, new File("local/records/" + proxyProcessMeta.getServiceId().toString()));
+                for (File file : new File(path).listFiles(
+                    pathname -> pathname.getName().contains("proxy.log"))) {
+                    FileUtility.copyFileToDirectory(file, new File("local/records/" + proxyProcessMeta.getServiceId()));
                 }
 
                 new Document("meta", proxyProcessMeta).saveAsConfig(Paths.get("local/records/metadata.json"));
@@ -457,14 +428,10 @@ public class BungeeCord extends AbstractScreenService implements ServerDispatche
             FileUtility.deleteDirectory(new File(path));
         }
 
-        CloudNetWrapper.getInstance().getProxys().remove(getServiceId().getServerId());
+        CloudNetWrapper.getInstance().getProxies().remove(getServiceId().getServerId());
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutRemoveProxy(proxyInfo));
-        System.out.println("Proxy " + toString() + " was stopped");
+        System.out.println("Proxy " + this + " was stopped");
 
-        try {
-            this.finalize();
-        } catch (Throwable throwable) {
-        }
         return true;
     }
 
